  * Correct short description of iso-scan. Closes: #501175.
  * PowerPC currently doesn't have hd-media images, so is not "bootable-usb".
  * There are no floppy images for i386 for Lenny; disable relevant sections.
  * Major rewrite of section about preparing a USB stick for booting the
    installer. Closes: #500206, #500283.

 -- Frans Pop <fjp@debian.org>  Mon, 06 Oct 2008 00:26:26 +0200

installation-guide (20080520) unstable; urgency=medium

  [ Frans Pop ]
  * Clarify console switching for the graphical installer.
    Thanks to Tim Richardson for the suggestion.

  [ Colin Watson ]
  * Spell "multiselect" correctly in apt-setup/services-select preseeding
    example.
  * Note that an empty preseed file is equivalent to a normal manual
    installation (thanks, Nathan Sutton).

  [ Robert Millan ]
  * Document how to start the installer from Windows.

  [ Frans Pop ]
  * Document installation using multiple CD/DVDs; update text about using a
    mirror in line with that.
  * Lenny will be version 5.0.
  * Warn about boot issues when using RAID on the root file system.
  * Update task selection section for changes in desktop task preseeding.
  * Fix double / in links, spotted by Stanislav Gromov. Closes: #472813.
  * Document new boot parameters to define mouse protocol and device (port)
    for the graphical installer.
  * Correct command to use to allow preseeding of netcfg when using a
    preconfiguration file downloaded from a server (preseed/url).
    Thanks to Durk Strooisma for the report and analysis. Closes: #476524.
  * Specify for which release the example preseed file is valid.
  * Document preseeding of grub password.
  * Update how to suppress the removal of existing LVM data using preseeding.
  * Update version of X11 used in Lenny.
  * Update kernel versions.
  * Update memory requirements for i386 and amd64. Elaborate on installing
    systems with less memory than the listed minimum.