@@ -45,6 +45,8 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
   * There are no floppy images for i386 for Lenny; disable relevant sections.
   * Major rewrite of section about preparing a USB stick for booting the
     installer. Closes: #500206, #500283.
+  * Update preconfiguration section for latest changes in the preseed udebs
+    and clarify preseeding of language/country.
 
  -- Frans Pop <fjp@debian.org>  Mon, 06 Oct 2008 00:26:26 +0200
 
